--- a/package.json
+++ b/package.json
@@ -211,6 +211,8 @@
   "dependencies": {
     "babel-polyfill": "6.20.0",
     "chalk": "1.1.3",
+    "commonmark": "^0.27.0",
+    "commonmark-react-renderer": "^4.3.2",
     "compression": "1.6.2",
     "cross-env": "3.1.3",
     "express": "4.14.0",
