--- a/package.json
+++ b/package.json
@@ -211,17 +211,17 @@
   "dependencies": {
     "babel-polyfill": "6.20.0",
     "chalk": "1.1.3",
-    "commonmark": "^0.27.0",
-    "commonmark-react-renderer": "^4.3.2",
     "compression": "1.6.2",
     "cross-env": "3.1.3",
     "express": "4.14.0",
     "fontfaceobserver": "2.0.7",
+    "github-markdown-css": "^2.4.1",
     "immutable": "3.8.1",
     "intl": "1.2.5",
     "invariant": "2.2.2",
     "ip": "1.1.4",
     "lodash": "4.17.2",
+    "marked": "^0.3.6",
     "minimist": "1.2.0",
     "react": "15.4.1",
     "react-dom": "15.4.1",
