--- a/package.json
+++ b/package.json
@@ -213,6 +213,7 @@
     "chalk": "1.1.3",
     "compression": "1.6.2",
     "cross-env": "3.1.3",
+    "draft-js": "^0.10.2",
     "express": "4.14.0",
     "fontfaceobserver": "2.0.7",
     "github-markdown-css": "^2.4.1",
@@ -221,13 +222,14 @@
     "invariant": "2.2.2",
     "ip": "1.1.4",
     "lodash": "4.17.2",
-    "marked": "^0.3.6",
+    "markdown-it": "^8.4.0",
     "minimist": "1.2.0",
+    "package.json": "^2.0.1",
     "react": "15.4.1",
     "react-dom": "15.4.1",
     "react-helmet": "3.2.2",
     "react-intl": "2.1.5",
-    "react-quill": "v1.0.0-beta-1",
+    "react-quill": "^1.1.0",
     "react-redux": "4.4.6",
     "react-router": "3.0.0",
     "react-router-redux": "4.0.6",
@@ -291,7 +293,7 @@
     "sinon": "2.0.0-pre",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
-    "webpack": "2.2.0-rc.3",
+    "webpack": "3.6.0",
     "webpack-dev-middleware": "1.9.0",
     "webpack-hot-middleware": "2.15.0"
   }
